[package]
name = "chrome"
categories = ["command-line-utilities"]
version = "0.1.0"
authors = ["Yash Srivastav <yash111998@gmail.com>"]

[dependencies]
actix-web = { version = "0.7.3", features=["alpn"] }
atty = "0.2.11"
ansi_term = "0.11.0"
bytes = "0.4.9"
console = "0.6.1"
failure = "0.1.2"
failure_derive = "0.1.2"
futures = "0.1.23"
http = "0.1.10"
lazy_static = "1.1.0"
serde_json = "1.0.26"
serde_urlencoded = "0.5.3"
syntect = "2.1.0"
url = "1.7.1"

[dependencies.clap]
version = "2.32.0"
default-features = true
features = ["yaml"]